# mpi_3lab_parallel

./: CMakeLists.txt  README.md  linearseparability.txt  manualinput.txt  tests.txt
include/: geometryOfHulls.h  line.h  point.h
src/: geometryOfHulls.cpp  line.cpp  linearSeparability.cpp  point.cpp
